--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_subject" value="New Email!">
         <input type="email" name="email" placeholder="Email Address" required>
-        <input type="hidden" name = "_next" value="C:\Users\Krish\Documents\Python\Email\thankyou.html">
+        <input type="hidden" name = "_next" value="thankyou.html">
         <input type="text" name="name" placeholder="write your msg here: " required>
         <button type="submit">Send</button>
 
